Initialise human score & computer score variables Start function for determining winner

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
             return "scissors";
         } else {
             alert("Invalid choice!");
+            return getHumanChoice();
         }
+    }
+
+    let humanScore = 0;
+    let computerScore = 0;
+
+    function playRound(humanChoice, computerChoice) {
+        
     }
 
 </script>
